flex/flex-tests/testData/js2_highlighting/NoSuperConstructorCall2.js2
class A extends B
{
    public function <error descr="Missed superclass's constructor invocation">A</error>()
    {
    }
}

class B
{
	public function B(needParam:String)
	{
	}
}

